fix nowrap sur les card abilities

--- a/source/client/editor/cardBuilder/styles.scss
+++ b/source/client/editor/cardBuilder/styles.scss
@@ -328,6 +328,7 @@
           text-transform: uppercase;
           font-size: 26px;
           transform-origin: left;
+          white-space: nowrap;
 
           .uppercase {
             font-size: 30px;
